add_library(CART SHARED ./CART.cpp)
add_executable(CART_test ./test.cpp)
target_link_libraries(CART ${base} ${TORCH_LIBRARIES})
target_include_directories(CART PRIVATE "${TORCH_INCLUDE_DIRS}")
target_link_libraries(CART_test ${CART} ${TORCH_LIBRARIES})
target_include_directories(CART_test PRIVATE "${TORCH_INCLUDE_DIRS}")